fix footer on mobile

--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -33,15 +33,20 @@
         }
     }
 
-    .textContainer{
+    .textContainer {
         width: 40%;
-        padding-top: 70px;
+        margin-left: 15px;
+
+        @media (min-width: 768px) {
+            padding-top: 70px;
+        }
+
         .h1 {
             // color: #474574;
             color: black;
             text-align: center;
             font-family: 'Bonbon';
-            font-size: 49px;
+            font-size: 39px;
             font-style: normal;
             font-weight: 400;
             line-height: normal;
@@ -55,10 +60,20 @@
             // z-index: 10;
             // position: relative;
             // cursor: pointer;
+
+            @media (min-width: 768px) {
+                font-size: 49px;
+            }
+    
         }
 
         .contactInfo{
             text-align: center;
+            font-size: 13px;
+
+            @media (min-width: 768px) {
+                font-size: 16px;
+            }
         }
     }
 
